# context-infrastructure

./: .env  .gitignore  AGENTS.md
.obsidian/: graph.json  workspace.json
adhoc_jobs/: .gitignore
adhoc_jobs/ai-monitoring-ai-security/: 01-安全架构策略.md  02-数据安全策略.md  (+4 more)
adhoc_jobs/git/myAgent-Shopping/AgentDebug/: PLAN.md  README.md  pyproject.toml
adhoc_jobs/git/myAgent-Shopping/AgentDebug/examples/: simple_agent.py  test_scenario.py
adhoc_jobs/git/myAgent-Shopping/AgentDebug/src/a2a_debugger/: __init__.py  cli.py
adhoc_jobs/git/myAgent-Shopping/AgentDebug/src/a2a_debugger/analyzer/: __init__.py  conversation.py  validator.py
adhoc_jobs/git/myAgent-Shopping/AgentDebug/src/a2a_debugger/models/: __init__.py  message.py
adhoc_jobs/git/myAgent-Shopping/AgentDebug/src/a2a_debugger/proxy/: __init__.py  debug_proxy.py
adhoc_jobs/git/myAgent-Shopping/AgentDebug/src/a2a_debugger/web/: __init__.py  dashboard.py
adhoc_jobs/git/myAgent-Shopping/AgentDebug/tests/: test_analyzer.py  test_message.py  test_proxy.py  test_validator.py
adhoc_jobs/git/myAgent-Shopping/AgentHub/: .gitignore  README.md  docker-compose.yml  pyproject.toml  test_send.py  tokens.json
adhoc_jobs/git/myAgent-Shopping/AgentHub/agents/calculator_agent/: agent.py  manifest.yaml
adhoc_jobs/git/myAgent-Shopping/AgentHub/agents/echo_agent/: agent.py  manifest.yaml
adhoc_jobs/git/myAgent-Shopping/AgentHub/agora/agent/: base.py  capability.py  context.py
adhoc_jobs/git/myAgent-Shopping/AgentHub/agora/discovery/: registry.py  resolver.py
adhoc_jobs/git/myAgent-Shopping/AgentHub/agora/protocol/: codec.py  message.py  transport.py
adhoc_jobs/git/myAgent-Shopping/AgentHub/agora/routing/: load_balance.py
adhoc_jobs/git/myAgent-Shopping/AgentHub/docs/agora/: architecture.md  quickstart.md
adhoc_jobs/git/myAgent-Shopping/AgentHub/docs/superpowers/plans/: 2025-04-08-agora-plan.md
adhoc_jobs/git/myAgent-Shopping/AgentHub/docs/superpowers/specs/: 2025-04-08-agora-design.md
adhoc_jobs/git/myAgent-Shopping/AgentHub/examples/: basic_discovery.py  multi_agent_chat.py
adhoc_jobs/git/myAgent-Shopping/AgentHub/hub/: Dockerfile  config.yaml  main.py  msg_queue.py  registry.py
adhoc_jobs/git/myAgent-Shopping/AgentHub/journal/daily/: 2025-04-08-reflection.md  2025-04-08.md
adhoc_jobs/git/myAgent-Shopping/AgentHub/tests/integration/: test_agent_lifecycle.py  test_message_routing.py
adhoc_jobs/git/myAgent-Shopping/AgentHub/tests/unit/: test_capability.py  test_codec.py  test_hub_queue.py  test_hub_registry.py  test_load_balance.py  test_message.py  test_transport.py
rules/: SOUL.md  USER.md
(+136 files in other folders)
